# flake8-jira-todo-checker

./: .bump2version  .bumpversion.cfg  .flake8  .gitignore  README.md  TODO  pyproject.toml  tox.ini
.circleci/: config.yml
flake8_jira_todo_checker/: __init__.py  checker.py  jira_client.py
test/: test_flake8_jira_todo_checker.py
