[tool.poetry]
name = "flake8-jira-todo-checker"
version = "0.4.0"
description = "Flake8 plugin to check that every TODO, FIXME, QQ etc comment has a JIRA ID next to it."
readme = "README.md"
homepage = "https://github.com/simonstjg/flake8-jira-todo-checker"
repository = "https://github.com/simonstjg/flake8-jira-todo-checker"
keywords = [
    "flake8",
    "lint",
    "todo",
    "jira"
]
authors = ["Simon StJG <Simon.StJG@gmail.com>"]
license = "GPL-3.0-or-later"

classifiers=[
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3"
jira = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8-black = "^0.2.1"
isort = "^5.6.4"
tox = "^3.20.1"
bump2version = "^1.0.1"

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
JIR = "flake8_jira_todo_checker:Checker"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | dist
  )/
)
'''

[tool.isort]
# See https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
